--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
         <h1 class="display-1 text-center">To Dos</h1>
 
         <form onsubmit="addTask()">
-            <div>
-                <label for="inputTask">Task</label>
-                <input type="text" id="inputTask" required>
+            <div class="mb-3">
+                <label for="inputTask" class="form-label">Task</label>
+                <input type="text" class="form-control" id="inputTask" placeholder="">
+              </div>
 
                 <label for="inputCompleted">Completed</label>
-                <select id="inputCompleted">
-                    <option value="">Select</option>
+                <select id="inputCompleted" class="form-select mb-3" aria-label="Default select example">
+                    <option>Select</option>
                     <option value="true">Completed</option>
                     <option value="false">Incompleted</option>
-                </select>
-            </div>
+                    
+                  </select>
 
             <button class="btn btn-primary" type="submit">Send</button>
         </form>
